# stan-language-server

./: .eslintrc.json  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PUBLISHING.md  README.md  bunfig.toml  eslint.config.mjs  package.json  prek.toml  pyproject.toml  renovate.json  server.ts  test.stan  tsconfig.json  tsconfig.src.json  tsconfig.tools.json
.github/workflows/: build-release.yml  publish.yml  release.yml  test-e2e.yml  test-unit.yml  test.yml
__fixtures__/: CLAUDE.md  simple.stan
__fixtures__/e2e/: functions.stanfunctions  invalid.stan  with_include.stan
npm/stan-language-server-bin/: README.md  package.json
scripts/: build-bin-package.ts  generate-wasm-data.ts  set-version.ts
src/: CLAUDE.md  lib.ts  server.ts
src/__fixtures__/: CLAUDE.md  complete.stan  diagnostics.error.stan  diagnostics.include.failing.stan  diagnostics.include.stan  diagnostics.warning.stan  included.stan  simple.stan  valid.stanfunctions
src/__tests__/: CLAUDE.md  compiler.test.ts  includes.test.ts
src/constants/: index.ts
src/handlers/: CLAUDE.md  completion.ts  diagnostics.ts  formatting.ts  hover.ts  index.ts  rename.ts
src/language/: CLAUDE.md  linter.ts
src/server/: cli.ts  index.ts
src/stanc/: CLAUDE.md  compiler.ts  includes.ts  provider.ts
src/types/: CLAUDE.md  common.ts  completion.ts  diagnostics.ts  formatting.ts  index.ts
tests/: generate-wasm-data.test.ts  pytest.ini  test_basics.py  test_completion.py  test_diagnostics.py  test_documentation.py  test_dynamic_registration.py  test_formatting.py  utils.py
(+67 files in other folders)
